# VisRepLea

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
scripts/: compare_model_size.py  fid_over_inference_steps.py  get_model_size.py  get_trainable_parameters.py  mse_over_time.py  mse_over_time_boxplot.py  prepare_flickr.py
scripts/figures/: image_over_time_plot.py
visprak/: args.py  custom_dataset.py  generate_images.py  mean_error.py  metrics.py  pipeline.py  preprocess_inputs.py  show_images.py  training.py  utils.py
visprak/models/ijepa/: modeling_ijepa.py  utils.py
