[project]
name = "visprak"
description = "Code for the praktikum on visual representation learning"
version = "0.0.1rc1"
dependencies = [
    "torch==2.5.0",
    "diffusers==0.31.0",
    "with-argparse>=1.0.0rc1"
]
requires-python = ">= 3.10"

[project.urls]
repository = "https://github.com/fleonce/VisPrakLea"

[tool.setuptools]
packages = ["visprak"]
