[project]
name = "visprak"
description = "Code for the praktikum on visual representation learning"
version = "0.0.1rc1"
dependencies = [
    "torch",
    "torchvision",
    "diffusers>=0.31.0",
    "with-argparse>=1.0.0rc1",
    "accelerate>=1.1.1",
    "datasets>=3.1.0",
    "transformers>=4.46.0",
    "tensorboard",
    "scipy",
    "matplotlib==3.10.0"
]
requires-python = ">= 3.10"

[project.urls]
repository = "https://github.com/fleonce/VisPrakLea"

[tool.setuptools]
packages = ["visprak"]
